k8s/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-clusterip
  namespace: pipeops
  labels:
    app: myapp
spec:
  type: ClusterIP
  selector:
    app: myapp
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
