k8s/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: titanic-api
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
  clusterIP: None
